<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".BMain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="481dp"
        android:layout_weight="1">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/scrim" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="487dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/planetearth" />

        <TextView
            android:id="@+id/tvGeneratio2"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_alignParentTop="true"

            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="191dp"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:text="@string/generation"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/circularImageView3"
            android:layout_width="65dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="18dp"
            android:layout_toStartOf="@+id/tvGeneratio"
            android:layout_toLeftOf="@+id/tvGeneratio"
            android:src="@drawable/rocketlogo"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="0dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="396dp"
        android:layout_height="456dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/myswipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margen">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTexto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/texto" />
                </LinearLayout>
            </ScrollView>


        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@drawable/b_button"
            android:text="@string/leave"
            android:textColor="@color/design_default_color_primary_dark" />

        <Button
            android:id="@+id/btnStay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary_dark"
            android:text="@string/stay"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>